# shortlink

./: .env  .env.sample  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
shorturl/: main.py
shorturl/templates/: index.html
